<resources>
    <string name="app_name">Resep Nusantara</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ayam">Ayam</string>
    <string name="bebek">Bebek</string>
    <string name="buah">Buah</string>
    <string name="cumi">Cumi</string>
    <string name="daging">Daging</string>
    <string name="ikan">Ikan</string>
    <string name="menu">Menu</string>
    <string name="resep_nusantara">Resep Nusantara</string>
    <string name="resepnusantara_com">resepnusantara.com</string>
    <string name="ayam_bakar_kecap">
        "Ayam Bakar Kecap\n\n"
        "Tips untuk memasak ayam bakar yang enak adalah bara api dari arang jangan terlalu besar, agar ayam dapat matang merata dan kulit tidak gosong."
        "Jangan lupa oleskan sedikit mentega pada saat ayam dibakar agartidak lengket. Selain itu mentega juga dapat membuat aroma lebih harum dan rasa Iebih gurih. Lebih baik dibakar sesaat sebelum disajikan.\n\n"
        "Bahan Bahan\n\n"

        "Bahan Utama:\n"
        "-1 ekor ayam, potong menjadi 4 bagian 2 sendok tea garam\n"
        "-1 buah jeruk nipis, peras aimya\n"
        "-250 ml kaldu ayam\n"
        "-2 sdm mentega\n\n"

        "Bumbu\n"
        "7 butir bawang merah\n"
        "4 siung bawang putih\n"
        "1/2 sdt ketumbar\n"
        "1/2 sdt pala bubuk\n"
        "1/2 sdt merica\n"
        "1 sdt garam\n"
        "2 sdm minyak goreng\n"
        "5 sendok makan kecap manis\n\n"

        "Sambal:\n\n"
        "5 sendok makan kecap manis\n"
        "3 buah cabai rawit iris tipis \n"
        "1 buahjeruklimau \n"


        "Cara Membuat\n\n"
        "1. Cuci dan bersihkan ayam, kemudian potong menjadi 4 bagian \n"
        "2. Lumuri dengan perasan air jeruk nipis dan garam. Diamkan sekitar 15 menit \n"
        "3. Haluskan bawang merah, bawang putih dan ketumbar \n"
        "4. Panas minyak dan tumis bumbu halus hingga harum, kemudian tambahkan pala bubuk, merica dan garam. \n"
        "5. Masukkan potongan ayam kemudian tuangkan kaldu ayam dan tambahkan kecap manis, aduk rata. Ungkep hingga ayam menjadi empuk dan masak hingga kaldu habis. Angkat dan sisihkan /n"
        "6. Bakar ayam di atas bara arang sambil olesi mentega. Bolak balik hingga matang merata /n"
        "7. Sajikan bersama dengan nasi hangat dan sambal kecap /n"

    </string>
    <string name="ayam_cabe_ijo">
    "Material is the metaphor.\n\n"
    " Untuk penyajiannya, ayam cabe ijo bisa disajikan bersama nasi putih hangat clan lalapan mentimun."
    ".Bisa juga disajikan seperti di rumah makan padang; sajikan bersama rebusan daun singkong muda. Pasti akan membuat acara santap siang ataupun santap malam di rumah anda terasa sangat istimewa.\n\n"
    "Bahan Bahan\n\n"

    "Bahan Utama:\n"
    "-1 ekor ayam broiler, cuci bersih, potong 8 bagian\n"
    "-1 sdm air jeruk nipis\n"
    "-2 sdt garam\n"
    "-2 sdm minyak goreng untuk menumis\n"
    "-2 lembar daun jeruk\n"
    "-2 buah serai, memarkan pangkalnya\n\n"

    "Bumbu Halus\n"
    "-8 butir bawang merah\n"
    "-5 siung bawang putih\n"
    "-10 buah cabai hijau besar\n"
    "-5 buah cabe rawit hijau besar\n"
    "-3 cm jahe\n"
    "-2 cm kunyit\n"
    "-3 butir kemiri\n"
    "-1 sdt garam\n"
    "-1 sdt gula pasir\n\n"

    "Cara Membuat\n\n"
    "1. Lumuri potongan ayam dengan airjeruk nipis dan garam, sisihkan, niarkan selama 15 menit.\n"
    "2. Goreng ayam dalam minyak banyak hingga kuning kecokelatan.\n"
    "3. Tumis seluruh bumbu halus hingga harum dan matang, masukkan daun jeruk dan serai. Kemudian masukkan ayam goreng. Aduk hingga bumbu cabai hijau merata.\n"
    "4. Sajikan hangat.\n"

    </string>
    <string name="Bebek_goreng_cabe_ijo">
    "Material is the metaphor.\n\n"
    " Untuk penyajian yang Iebih berwarna, jangan lupa tambahkan daun selada, tomat, potongan jeruk lemon atau timun. Bahan-bahan pelengkap ini bisa anda sesuaikan dengan selera dan kebutuhan. Selamat mencoba."\n\n"

    "Bahan Utama:\n"
    "-1 ekor bebek, cuci bersih, potong 4 bagian\n"
    "-2 sdm air jeruk nipis\n"
    "-1 butir asam kandis\n"
    "-2 sdt garam\n"
    "-2 sdm minyak goreng \n"
    "-2 lembar daun jeruk\n"
    "-1 batang serai, memarkan\n"
    "-200 ml air\n"
    "-100 ml santan kental\n\n"


    "Bumbu Halus\n"
    "-4 butir bawang merah\n"
    "-2 siung bawang putih\n"
    "-150 gr cabai hijau \n"
    "-5 buah cabe rawit hijau besar\n"
    "-2 cm jahe\n"
    "-2 cm kunyit\n"
    "-2 cm lengkuas\n"
    "-2 butir kemiri\n"
    "-garam secukupnya\n"
    "-1 sdt gula pasir\n\n"

    "Cara Membuat\n\n"
    "1. Lumuri potongan ayam dengan air jeruk nipis, diamkan selama 30 menit.\n"
    "2. Panaskan minyak Goreng ayam, Tumis seluruh bumbu halus hingga harum, tambahkan serai, daun jeruk dan asam kandis, masak hingga bumbu matang.\n"
    "3. Masukkan daging bebek, masak hingga bebek setengah matang. Tuang air dan santan.\n"
    "4. Masak dengan api kecil hingga bebek matang dan kuah berminyak. Angkat.\n"

	</string>
    <string name="Bacem_Bebek">
    "Material is the metaphor.\n\n"
    " Bacem bebek bisa bertahan selama tiga harijika disimpan di dalam freezer. Anda bisa memanasinya ketika akan dihidangkan lagi. Saat menghidangkan jangan Iupa untuk memmisahkan daun salam, Iengkuas dan jahe agar tampilan lebih bersih dan rapi.\n\n"

    "Bahan Utama:\n"
    "-1 ekor bebek, cuci bersih, potong 8 bagian\n"
    "-2 sdm air jeruk nipis\n"
    "-2 Iembar daun salam \n"
    "-1 500 ml air kelapa \n"
    "-2 batang serai, memarkan\n"
    "-50 ml air\n"
    "-100 ml santan kental\n\n"


    "Bumbu Halus\n"
    "-5 butir bawang merah\n"
    "-6 siung bawang putih\n"
    "-2 sdt ketumbar\n"
    "-2 cm lengkuas\n"
    "-1 sdt garam\n"
    "-100 gr gula merah\n\n"

    "Cara Membuat\n\n"
    "1. Rendam daging bebek dengan airjeruk nipis, dan garam.\n"
    "2. Masak daging bebek dengan air kelapa, bumbu halus, daun salam, lengkuas, serai, dan jahe sampai matang dan empuk.\n"
    "3. Goreng bebek sampai kecokelatan. Angkat dan sajikan.\n"

	</string>
    <string name="Asam2_Iga">
    "Material is the metaphor.\n\n"
    " Rasa pedas, asam dan gurih nya iga menjadikan tidak hanya mudah disantap tetapi juga Iezat dilidah. Masakan siap dinikmati selagi masih panas atau hangat. Tidak terlalu rumit resep asam-asam iga ini, bukan? Selamat berkreasi.\n\n"

    "Bahan Bahan:\n"
    "-2 sendok makan minyak goreng \n"
    "-2 siung bawang putih, iris-iris n"
    "-2 Iembar daun salam \n"
    "-5 siung bawang merah, iris-iris \n"
    "-2 buah cabai merah, potong-potong 1 jari 3 buah cabai hijau, potong-potong 1 jari \n"
    "-½ kg iga sapi, potong-potong dan biarkan daging masih melekat di tulangnya \n"
    "-1 buah tomat, potong melintang \n"
    "-4 buah belimbing sayur, belah dua \n"
    "-Garam dan merica secukupnya \n"
    "-2 cm lengkuas, memarkan/digeprek \n"
    "-gula merah secukupnya\n\n"

    "Cara Membuat\n\n"
    "1. Rebus lga sapi sampai empuk dan matang dengan 4 gelas air. Saring dan buang airnya diganti dengan air yang baru. Rebus lagi dengan api yang kecil; \n"
    "2. Sementara itu, panaskan minyak goreng, tumis bawang merah dan bawang putih sampai harum; \n"
    "3. Masukkan cabai merah dan cabai hijau, aduk-aduk; \n"
    "4. Masukkan tumisan ini ke dalam panci berisi iga rebus yang sudah lebih dahulu direbus; \n"
    "5. Masak hingga mendidih; \n"
    "6. Masukkan gula merah, lengkuas yang sudah di geprek, daun salam, tomat, garam serta merica, aduk rata; \n"
    "7. Masak lagi hingga sayuran matang.\n\n"

	</string>
    <string name="Beef_Teriyaki">
    "Material is the metaphor.\n\n"
    " Beef teriyaki salah satu olahan daging sapi khas Jepang dengan campuran bumbu teriyaki yang manis juga gurih. Langsung saja ulik resepnya dan praktek di dapur rumah Anda. Selamat mencoba.\n\n"

    "Bahan Bahan:\n"
    "-150 gram daging has Iuar, iris tipis-tipis \n"
    "-1 sdt air jahe n"
    "-1 sdt kecap asin \n"
    "-1 sdt merica bubuk \n"
    "-1 sdt angciu \n"
    "-1 sdm gula merah 4 sdm minyak goreng \n"
    "-1 buah bawang Bombay, iris bulat \n"
    "-iris bulat 1/2 buah paprika hijau, potong bentuk korek api \n"
    "-1 sdt gula pasir \n"
    "-50 ml air mendidih \n"
    "-50 gram Acar Lobak dan Wortel \n"
    "-1/2 sdt cuka \n"
    "-1/2 sdt garam \n\n"

    "Cara Membuat\n\n"
    "1. Campur daging iris dengan airjahe, kecap asin, merica, angciu, dan gula merah, aduk rata. Diamkan 30 menit.\n"
    "2. Sementara itu, panaskan minyak goreng, tumis bawang merah dan bawang putih sampai harum; \n"
    "3. Panaskan gula pasir, masakn hingga kecokelatan. Siram dengan air mendidih, aduk dan Sisihkan; \n"
    "4. Panaskan 2 sdm minyak goreng, masukkan daging bern=bumbu selembar demi selembar. Setelah berubah warna, masukkan tumisan bawang Bombay dan paprika. Tambahkan air gula, garam, aduk rata. \n"
    "5. Hidangkan selagi panas dengan pelengkap acar lobak dan wortel yang disiram mayones.\n\n"

	</string>
    <string name="Bala_Bala_Teri">
    "Material is the metaphor.\n\n"
    " BaIa-bala teri sayuran ini sangat pas sebagai teman makan nasi atau sekedar untuk camilan. Sajikan bersama teh hangat dan jangan lupa nikmati bersama cabe rawit. Selamat berkreasi.\n\n"

    "Bahan Bahan:\n"
    "-200 gram teri nasi basah, cuci bersih \n"
    "-1 batang daun bawang, iris halus \n"
    "-1 buah wortel, potong ala korek api  \n"
    "-1 butir telur \n"
    "-100 gram tepung terigu \n"
    "-3 sdm air \n"
    "-2 sdm tepung beras \n"
    "-Penyedap rasa secukupnya (bila suka) Garam secukupnya \n"
    "-Minyak Goreng \n"
    "-1 butir bawang merah, haluskan \n"
    "-1 butir kemiri, haluskan  \n"
    "-l sdm ketumbar sangrai, haluskan \n"
    "-2 cm kunyit, bakar, Ialu kupas, haluskan 3 siung bawang putih, haluskan \n\n"

    "Cara Membuat\n\n"
    "1. Campurkan semua bahan, kecuali minyak goreng, menjadi satu, aduk rata \n"
    "2. Bentuk adonan bulat dengan bantuan 2 buah sendok makan; \n"

    "3. Masukkan ke dalam minyak panas, goreng dengan api yang
sedang, bolak balik bala bala hingga kecoklatan, angkat dan tiriskan.\n\n"

	</string>
</resources>