<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>

    <item android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/nav_ayam"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/ayam" />
            <item
                android:id="@+id/nav_bebek"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/bebek" />
            <item
                android:id="@+id/nav_buah"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/buah" />
            <item
                android:id="@+id/nav_cumi"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/cumi" />
            <item
                android:id="@+id/nav_daging"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/daging" />
            <item
                android:id="@+id/nav_ikan"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/ikan" />
        </menu>
    </item>

</menu>
