<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.abc.resepnusantara.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.abc.resepnusantara.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_ayam"
        android:name="com.abc.resepnusantara.ui.Ayam.Ayam"
        android:label="Ayam"
        tools:layout="@layout/fragment_ayam" />

    <fragment
        android:id="@+id/nav_bebek"
        android:name="com.abc.resepnusantara.ui.Bebek.Bebek"
        android:label="@string/bebek"
        tools:layout="@layout/fragment_bebek" />
    <fragment
        android:id="@+id/nav_buah"
        android:name="com.abc.resepnusantara.ui.Buah.Buah"
        android:label="@string/buah"
        tools:layout="@layout/fragment_buah" />

    <fragment
        android:id="@+id/nav_cumi"
        android:name="com.abc.resepnusantara.ui.Cumi.Cumi"
        android:label="@string/cumi"
        tools:layout="@layout/fragment_cumi" />

    <fragment
        android:id="@+id/nav_daging"
        android:name="com.abc.resepnusantara.ui.Daging.Daging"
        android:label="@string/daging"
        tools:layout="@layout/fragment_daging" />

    <fragment
        android:id="@+id/nav_ikan"
        android:name="com.abc.resepnusantara.ui.Ikan.Ikan"
        android:label="@string/ikan"
        tools:layout="@layout/fragment_ikan" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.abc.resepnusantara.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.abc.resepnusantara.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>